syntax = "proto2";

package com.nt.protobuf;

option optimize_for = SPEED;
option java_package = "com.netty.sixthexample";
option java_outer_classname = "MyDataInfo";

message DataInfo{
    enum DataType{
        PersonType = 1;
        CatType = 2;
        DogType = 3;
    }
    required DataType data_type = 1;
    oneof dataBody{
        Person person = 2;
        Cat cat = 3;
        Dog dog = 4;
    }

}


message Cat{
    optional string cat_name = 1;
    optional int32 cat_age = 2;
}

message Dog{
    optional string dog_name = 1;
    optional string dog_sex = 2;
}

message Person{
    optional string name = 1;
    optional int32 aeg = 2;
    optional string address = 3;
}